Update index.html with ALC Code and formatting
Added ALC Code to the header and ensured proper HTML structure.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 <header>
     <h1>Aadarsh Computer Education</h1>
     <p>MS-CIT Authorized Computer Training Institute</p>
+    <p>ALC Code :- 78210530</p>
 </header>
 
 <nav>
@@ -144,4 +145,5 @@
 </footer>
 
 </body>
+
 </html>
