Revise header and footer content in index.html
Updated the header and footer content, changed the title to 'Aadarsh Computer Education', and modified the description to 'MS-CIT Authorized Learning Center'.

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 <body>
 
 <header>
-    <h1>Aadarsh Computer Education</h1>
-    <p>MS-CIT Authorized Computer Training Institute</p>
+    <h1><b></b>Aadarsh Computer Education<b></b></h1>
+    <p><h3></h3>MS-CIT Authorized Learning Center</h3></p>
     <p>ALC Code :- 78210530</p>
 </header>
 
@@ -147,3 +147,4 @@
 </body>
 
 </html>
+
