Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <header>
     <h1><b></b>Aadarsh Computer Education<b></b></h1>
-    <p><h3></h3>MS-CIT Authorized Learning Center</h3></p>
+    <p><h3>MS-CIT Authorised Learning Center</h3></p>
     <p>ALC Code :- 78210530</p>
 </header>
 
@@ -147,4 +147,5 @@
 </body>
 
 </html>
+
 
