Revise contact details and enhance HTML structure
Updated contact information and improved formatting.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
     <div class="section" id="contact">
         <h2>Contact Us</h2>
         <p>
-            📍 Address: Your Institute Address Here<br>
+            📍 Address: Shop no A-07,Suraj plaza ,Chandulal park, 
+                        opp.Dena Bank,Shivaji Maharaj Marg, 
+                        Bhayandar(w) 401107-<br>
             📞 Phone: 7738623530<br>
             📧 Email: aadarshcomputer@gmail.com
         </p>
@@ -147,5 +149,6 @@
 </body>
 
 </html>
+
 
 
