Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="section" id="about">
         <h2>About Us</h2>
         <p>
-            Aadarsh Computer Education is a trusted MS-CIT computer institute
+            Aadarsh Computer Education is a trusted MS-CIT authorised computer institute
             dedicated to providing quality computer education to students,
             professionals, and beginners. Our mission is to build strong digital
             skills for a better future.
@@ -133,7 +133,7 @@
         <p>
             📍 Address: Shop no A-07,Suraj plaza ,Chandulal park, 
                         opp.Dena Bank,Shivaji Maharaj Marg, 
-                        Bhayandar(w) 401107-<br>
+                        Bhayandar(w),Thane-401107<br>
             📞 Phone: 7738623530<br>
             📧 Email: aadarshcomputer@gmail.com
         </p>
@@ -149,6 +149,7 @@
 </body>
 
 </html>
+
 
 
 
